--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "~2.3.3",
     "express": "~4.13.1",
     "express-session": "^1.12.1",
+    "moment": "^2.10.6",
     "mongoose": "^4.2.7",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
