--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
-    "connect-mongo": "^0.8.2",
+    "co": "^4.6.0",
+    "connect-redis-sessions": "^1.3.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
-    "express-session": "^1.12.1",
+    "express-formidable": "^0.1.3",
+    "guthrie-js": "0.0.3",
+    "hiredis": "^0.5.0",
     "moment": "^2.10.6",
     "mongoose": "^4.2.7",
     "morgan": "~1.6.1",
+    "redis": "^2.6.2",
     "serve-favicon": "~2.3.0"
   }
 }
