--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.10.6",
     "mongoose": "^4.2.7",
     "morgan": "~1.6.1",
+    "mysql": "^2.11.1",
     "redis": "^2.6.2",
     "serve-favicon": "~2.3.0"
   }
