--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "~2.3.3",
     "express": "~4.13.1",
     "express-formidable": "^0.1.3",
+    "formidable": "^1.0.17",
     "guthrie-js": "0.0.3",
     "hiredis": "^0.5.0",
     "moment": "^2.10.6",
