--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "supervisor ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
@@ -16,7 +16,7 @@
     "express-formidable": "^0.1.3",
     "express-session": "^1.14.0",
     "formidable": "^1.0.17",
-    "guthrie-js": "0.0.3",
+    "guthrie-js": "0.0.4",
     "hiredis": "^0.5.0",
     "moment": "^2.10.6",
     "mongoose": "^4.2.7",
