--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "express-formidable": "^0.1.3",
     "express-session": "^1.14.0",
     "formidable": "^1.0.17",
-    "guthrie-js": "0.0.4",
+    "guthrie-js": "^0.0.5",
     "hiredis": "^0.5.0",
     "moment": "^2.10.6",
     "mongoose": "^4.2.7",
